[package]
name = "rusttls"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
ring = "0.17.8"

[dev-dependencies]
axum = "0.7.5"
bytes = "1.6.1"
futures-util = { version = "0.3.30", features = ["alloc"] }
http-body-util = "0.1.2"
hyper = "1.4.1"
hyper-util = { version = "0.1.6", features = ["tokio"] }
openssl = "0.10.66"
reqwest = "0.12.5"
rustls = "0.23.11"
tokio = { version = "1.39.2", features = ["macros", "net", "rt-multi-thread"] }
tokio-openssl = "0.6.4"
